# panix

./: .gitignore  .vimspector.json  Cargo.toml  flake.nix
.cargo/: config.toml
datatests/: Cargo.toml
datatests/tests/: datatest.rs  nixcpp.rs
design/: gc.md
gc/: Cargo.toml
gc/src/: constants.rs  heap.rs  heap_page.rs  init.rs  lib.rs  loh.rs  object.rs  region.rs  rootset.rs
gc/src/object/: mod.rs
gc/src/pointer/: internal.rs  mod.rs
gc/src/specialized_types/: array.rs  heterogeneous_array.rs  mod.rs  string.rs
gc_bench/: Cargo.toml
gc_bench/src/: main.rs
gc_derive/: Cargo.toml
gc_derive/src/: lib.rs
identpool/: Cargo.toml
identpool/src/: lib.rs
interpreter/: Cargo.toml
interpreter/src/: lib.rs  sandbox.rs
interpreter/src/builtins/: builtins.nix  cons.nix  definition.nix  json_parser.rs  json_serializer.rs  mod.rs  prelude.nix  versions.nix
interpreter/src/compiler/: ast.rs  lookup_scope.rs  mod.rs  tests.rs  thunk_compiler.rs
interpreter/src/compiler/normalize/: add_builtins.rs  convert_to_normalized.rs  misc.rs  mod.rs  remove_attrset_rec.rs  remove_multipath_attrset.rs  remove_with_expr.rs
interpreter/src/compiler/normalize/normalized_ast/: impls.rs  mod.rs
interpreter/src/compiler/normalize/remove_multipath_attrset/: entry_collection.rs
interpreter/src/evaluator/: mod.rs
interpreter/src/tests/: eval_tests.rs  mod.rs
interpreter/src/util/: mod.rs
interpreter/src/vm/: mod.rs  opcodes.rs  value.rs
interpreter/src/vm/value/: debug.rs
lexer/: Cargo.toml
lexer/src/: lib.rs
lexer/src/lexer/: input.rs  mod.rs  stackstack.rs  tests.rs  util.rs
lexer_impedance_matcher/: Cargo.toml
lexer_impedance_matcher/src/: buffer.rs  lib.rs
panix/: Cargo.toml
panix/src/: main.rs
parser/: Cargo.toml
parser/src/: lexer.rs  lib.rs  tests.rs
src/: lexer.rs  main.rs
src/parser/: mod.rs
(+20 files in other folders)
