[workspace]
resolver = "2"

default-run = "panix"

members = [
    "lexer",
    "parser",
    "panix",
    "identpool",
    "gc",
    "lexer_impedance_matcher", "gc_bench",
]

[workspace.dependencies]
parser = {path = "./parser"}
identpool = {path = "./identpool"}
lexer = {path = "./lexer" }
gc = {path = "./gc"}
lexer_impedance_matcher = {path = "./lexer_impedance_matcher"}
memchr = "2.6.4"