[workspace]
resolver = "2"

default-run = "panix"

members = [
    "lexer",
    "parser",
    "panix",
    "identpool",
    "gc",
    "gc_derive",
    "lexer_impedance_matcher",
    "gc_bench", "interpreter",
]

[workspace.dependencies]
parser = {path = "./parser"}
identpool = {path = "./identpool"}
lexer = {path = "./lexer" }
interpreter = {path = "./interpreter"}
gc = {path = "./gc"}
gc_derive = {path = "./gc_derive"}
lexer_impedance_matcher = {path = "./lexer_impedance_matcher"}

memchr = "2.6.4"
thiserror = "1"
