[workspace]
resolver = "2"


members = [
    "lexer",
    "parser",
    "panix",
    "gc",
    "gc_derive",
    "lexer_impedance_matcher",
    "gc_bench", "interpreter",
]

[workspace.dependencies]
parser = {path = "./parser"}
lexer = {path = "./lexer" }
interpreter = {path = "./interpreter"}
gc = {path = "./gc"}
gc_derive = {path = "./gc_derive"}
lexer_impedance_matcher = {path = "./lexer_impedance_matcher"}

memchr = "2.6.4"
thiserror = "1"
