[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
bumpalo = {version = "3"}

parser.workspace = true
gc.workspace = true
gc_derive.workspace = true

thiserror.workspace = true
regex.workspace = true
memchr.workspace = true
    
md-5 = "0.10"
base16ct = "0.2"
sha1 = "0.10"
sha2 = "0.10"
